#2626 closed bug (fixed)
p4 (perforce client) doesn't work
Reported by: | rossi | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
p4 (perforce client) build for BeOS R5 doesn't work. Fails with the following message:
rossi@wayreth home> p4 runtime_loader: elf_resolve_symbol: could not resolve symbol '_kunlock_node_' resolve symbol "_kunlock_node_" returned: -2147478780 runtime_loader: troubles relocating: 0x80001304 (image: p4) rossi@wayreth home>
Change History (4)
comment:1 by , 17 years ago
comment:2 by , 17 years ago
Btw, the client is still available using the archived releases on the Perforce site:
http://www.perforce.com/perforce/downloads/otherlist.html#beos5x86
Note:
See TracTickets
for help on using tickets.
Looks like p4 is using an undocumented syscall...