* Adds the _kunlock_node_() syscall obviously used by p4. This should fix   ticket #2626.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@27011 a95241bf-73f2-0310-859d-f6bbb57e9c96